--- a/index.html
+++ b/index.html
@@ -130,7 +130,39 @@
       <div class="container-fluid">
         <div class="text-center">
           <h4>Projects</h4>
-          These are projects that I have worked on alone or have done collaborately.
+          These are projects that I have worked on alone or have done collaborately.<br /><br />
+          <div class="row">
+            <div class="col-sm-4" id="PrTDC">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  Image Goes here
+                </div>
+                <div class="panel-footer">
+                  The Dreamer's Princess
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4" id="PrPB516">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  Image Goes here
+                </div>
+                <div class="panel-footer">
+                  PiBoy5 2016
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4" id="PrTFC">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  Image Goes here
+                </div>
+                <div class="panel-footer">
+                  Legacy of Goblins: The First Conflict
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -143,7 +175,7 @@
         <input type="email" name="email" placeholder="Your Email"/><br /><br />
         <span id="Subject">
           <input type="text" name="subject" placeholder="Subject"/><br /><br />
-          <textarea type="text" name="message" placeholder="Message here."/></textarea/><br /><br />
+          <textarea type="text" name="message" placeholder="Message here."/></textarea/><br />
           <input type="submit" name="send" value="Send Mail"/>
         </span>
       </form>
