--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
           <div class="text-center"><h4>Current Career Objective</h4></div>
           <div class="row">
             <div class="col-sm-4">
-              <div class="text-center" style="font-">As an Individual</div></br>
+              <div class="text-center"><b>As an Individual</b></div></br>
               As a college graduate who expanded his skillset, I'm continously seeking to learn more things about my fields(s) while moving forward with any given task and projects.
             </div>
             <div class="col-sm-4">
-              <div class="text-center">As a Developer</div></br>
+              <div class="text-center"><b>As a Developer</b></div></br>
               As a developer, I seek to preform as efficient and as clean as I can make my work. My code will always be readable, efficient and leave as little footprint as possible, to deliver the best experience to the user, and player.
             </div>
             <div class="col-sm-4">
-              <div class="text-center">As an Artist</div></br>
+              <div class="text-center"><b>As an Artist</b></div></br>
               As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best performance.
             </div>
           </div>
@@ -84,11 +84,11 @@
           <div class="col-sm-6">
             <h5>Skillset</h5>
             <ul>
+              <li>Level and Set Design</li>
               <li>C++, C#, HTML5, SASS, jQuery</li>
               <li>Wix, Wordpress</li>
               <li>3D Modeling and Sculpting</li>
               <li>Video Editing and Key-frame Animation</li>
-              <li>Level and Set Design</li>
             </ul>
             <h5>Minor Skills</h5>
             <ul>
@@ -100,11 +100,11 @@
           <div class="col-sm-6 RightSide">
             <h5>Set Of Tools</h5>
             <ul>
+              <li>Unity 5, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
               <li>Visual Studio, MonoDevelop, Atom, Linux</li>
               <li>Maya, Blender</li>
               <li>After Effects, kdenlive</li>
               <li>Photoshop, Illustrator, Gimp, Krita, Inkscape</li>
-              <li>Unity 5, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
             </ul>
             <h5>Education</h5>
             <ul>
@@ -116,96 +116,138 @@
         </div>
         <div class="container-fluid">
           <div class="text-center"><h5>Work Experience</h5></div>
-          <ul>
-            <li>
-              Video Game Design Instructor - Feb-Apr 2016<br />
-              I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.
-            </li><br />
-            <li>
-              Head Programmer - August 2016 - February 2017<br />
-              I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the work was done with Unity and HTML5.
-            </li><br />
-            <li>
-              Environmental Designer & VR Interactive Programmer - December 2016 - Feburary 2017<br />
-              I worked as a Level Designer, Animator and Programmer at SI3D Media to create a VR Environment for some of their projects, including commercials, interactive environments and promotional assets.
-            </li>
-          </ul>
+          <div class="row">
+            <div class="col-sm-4">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>Job:</td>
+                    <td>Video Game Design Instructor</td>
+                  </tr>
+                  <tr>
+                    <td>Durning</td>
+                    <td>Febuary to April, 2016</td>
+                  </tr>
+                  <tr>
+                    <td>About</td>
+                    <td>I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.</br>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-sm-4">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>Job:</td>
+                    <td>Head Programmer</td>
+                  </tr>
+                  <tr>
+                    <td>Durning</td>
+                    <td>August 2016 - Febuary 2017</td>
+                  </tr>
+                  <tr>
+                    <td>About</td>
+                    <td>I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the work was done with Unity and HTML5.</br>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-sm-4">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>Job:</td>
+                    <td>Environmental Designer & VR Interactive Programmer</td>
+                  </tr>
+                  <tr>
+                    <td>Durning</td>
+                    <td>December 2016 - Feburary 2017</td>
+                  </tr>
+                  <tr>
+                    <td>About</td>
+                    <td>  I worked as a Level Designer, Animator and Programmer at SI3D Media to create a VR Environment for some of their projects, including commercials, interactive environments and promotional assets.</br>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <!-- Portfolio Screen -->
     <div id="MainPortfolio">
-      <nav class="navbar navbar-default MainMenu">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav">
-            <li style="width:33%"><a id="PFLDesign" onclick="ChangeScreens(6)">Level Desgin</a></li>
-            <li style="width:33%"><a id="PF3DArt" onclick="ChangeScreens(7)">3D Art</a></li>
-            <li style="width:33%"><a id="PFCSS" onclick="ChangeScreens(8)">CSS Styles</a></li>
-          </ul>
+      <div class='container'>
+        <div class="text-center" style="vertical-align:middle;">
+          <br /><br /><br /><br />
+          <a id="PFLDesign" onclick="ChangeScreens(6)"><h2>Level Desgin</h2><br />Some of the best levels I've designed</a><br /><br /><br /><br />
+          <a id="PF3DArt" onclick="ChangeScreens(7)"><h2>3D Art</h2><br />Compositions and Models</a><br /><br /><br /><br />
+          <a id="PFCSS" onclick="ChangeScreens(8)"><h2>Web Design</h2><br />Some CSS Userstyles and Pages I've designed.</a>
         </div>
-        </nav>
-        <div id="PortLevel">
-          <div class='container-fluid'>
-            <div class="text-center"><h3>Level Design Screenshots</h3></div>
-            <div class="row">
-              <div class="col-md-4">
-                <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195">
-                <img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195" style="width:100%" /></a>
-              </div>
-              <div class="col-md-4">
-                <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10687492_856956517682494_3112742743045850855_o.jpg?efg=eyJpIjoidCJ9&oh=c05f4bffca45e4c0242ae0be6f99de05&oe=59FE08C3">
-                <img class="img-responsive" src="img/Map1.png" style="width:100%;" /></a>
-            </div>
-            <div class="col-md-4">
-              <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10015001_732963686748445_1051440864_o.jpg?efg=eyJpIjoidCJ9&oh=c4921fee28b7cc86e935b47c2fd0f050&oe=5A00E034">
-              <img class="img-responsive" src="img/Map2.png" style="width:100%;" /></a>
+      </div>
+    </div>
+    <!-- -->
+    <div id="PortLevel">
+      <div class='container-fluid'>
+        <div class="text-center"><h3>Level Design Screenshots</h3></div>
+        <div class="row">
+          <div class="col-md-4">
+            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195">
+            <img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195" style="width:100%" /></a>
           </div>
+          <div class="col-md-4">
+            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10687492_856956517682494_3112742743045850855_o.jpg?efg=eyJpIjoidCJ9&oh=c05f4bffca45e4c0242ae0be6f99de05&oe=59FE08C3">
+            <img class="img-responsive" src="img/Map1.png" style="width:100%;" /></a>
           </div>
-          <div class="row">
-            <div class="col-md-4">
-              <a target="_blank" href="img/CDMap1.png">
-              <img class="img-responsive" src="img/CDMap1p.png" style="width:100%" /></a>
-            </div>
-            <div class="col-md-4">
-              <a target="_blank" href="img/CDMap2.png">
-              <img class="img-responsive" src="img/CDMap2p.png" style="width:100%" /></a>
-            </div>
-            <div class="col-md-4">
-              <a target="_blank" href="https://68.media.tumblr.com/9b21897249ac105cac0a01d0955fa160/tumblr_o78ylivvrc1v1gts7o10_1280.png">
-              <img class="img-responsive" src="https://68.media.tumblr.com/9b21897249ac105cac0a01d0955fa160/tumblr_o78ylivvrc1v1gts7o10_1280.png" style="width:100%" /></a>
-            </div>
+          <div class="col-md-4">
+            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10015001_732963686748445_1051440864_o.jpg?efg=eyJpIjoidCJ9&oh=c4921fee28b7cc86e935b47c2fd0f050&oe=5A00E034">
+            <img class="img-responsive" src="img/Map2.png" style="width:100%;" /></a>
           </div>
         </div>
-        </div>
-        <div id="Port3D">
-          <div class='container-fluid'>
-            <div class="text-center"><h4>3D Art - WIP</h4><br />More incoming!!</div>
-            <div class='row'>
-              <div class="col-sm-4">
-                <a target="_blank" href="https://68.media.tumblr.com/d578f986668d5f317ea0f0c00b8d3de3/tumblr_oc8c0codgc1v1gts7o2_1280.jpg"><img class="img-responsive" src="https://68.media.tumblr.com/d578f986668d5f317ea0f0c00b8d3de3/tumblr_oc8c0codgc1v1gts7o2_1280.jpg" /></a>
-              </div>
-              <div class="col-sm-4">
-                <a target="_blank" href="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg"><img class="img-responsive" src="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg" /></a>
-              </div>
-              <div class="col-sm-4">
-                <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6"><img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6" /></a>
-              </div>
-              <div class="col-sm-6">
-                <a target="_blank" href="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png"><img class="img-responsive" src="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png" /></a>
-              </div>
-              <div class="col-sm-6">
-                <a target="_blank" href="https://68.media.tumblr.com/dcfc2d1a16a8accd9a52bd0db43b2864/tumblr_o4vlub1hU51v1gts7o3_1280.png"><img class="img-responsive" src="https://68.media.tumblr.com/dcfc2d1a16a8accd9a52bd0db43b2864/tumblr_o4vlub1hU51v1gts7o3_1280.png" /></a>
-              </div>
-            </div>
+        <div class="row">
+          <div class="col-md-4">
+            <a target="_blank" href="img/CDMap1.png">
+            <img class="img-responsive" src="img/CDMap1p.png" style="width:100%" /></a>
+          </div>
+          <div class="col-md-4">
+            <a target="_blank" href="img/CDMap2.png">
+            <img class="img-responsive" src="img/CDMap2p.png" style="width:100%" /></a>
+          </div>
+          <div class="col-md-4">
+            <a target="_blank" href="https://68.media.tumblr.com/9b21897249ac105cac0a01d0955fa160/tumblr_o78ylivvrc1v1gts7o10_1280.png">
+            <img class="img-responsive" src="https://68.media.tumblr.com/9b21897249ac105cac0a01d0955fa160/tumblr_o78ylivvrc1v1gts7o10_1280.png" style="width:100%" /></a>
           </div>
         </div>
-        <div id="PortCSS">
-          <div class='container '>
-          <div class="text-center">
-            <h1>Work In Progress, This section is coming soon!!</h1>
+      </div>
+    </div>
+    <div id="Port3D">
+      <div class='container-fluid'>
+        <div class="text-center"><h4>3D Art - WIP</h4><br />More incoming!!</div>
+        <div class='row'>
+          <div class="col-sm-4">
+            <a target="_blank" href="https://68.media.tumblr.com/d578f986668d5f317ea0f0c00b8d3de3/tumblr_oc8c0codgc1v1gts7o2_1280.jpg"><img class="img-responsive" src="https://68.media.tumblr.com/d578f986668d5f317ea0f0c00b8d3de3/tumblr_oc8c0codgc1v1gts7o2_1280.jpg" /></a>
           </div>
+          <div class="col-sm-4">
+            <a target="_blank" href="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg"><img class="img-responsive" src="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg" /></a>
+          </div>
+          <div class="col-sm-4">
+            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6"><img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6" /></a>
+          </div>
+          <div class="col-sm-6">
+            <a target="_blank" href="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png"><img class="img-responsive" src="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png" /></a>
+          </div>
+          <div class="col-sm-6">
+            <a target="_blank" href="https://68.media.tumblr.com/dcfc2d1a16a8accd9a52bd0db43b2864/tumblr_o4vlub1hU51v1gts7o3_1280.png"><img class="img-responsive" src="https://68.media.tumblr.com/dcfc2d1a16a8accd9a52bd0db43b2864/tumblr_o4vlub1hU51v1gts7o3_1280.png" /></a>
           </div>
         </div>
+      </div>
+    </div>
+    <div id="PortCSS">
+      <div class='container '>
+      <div class="text-center">
+        <h1>Work In Progress, This section is coming soon!!</h1>
+      </div>
+      </div>
     </div>
     <!-- Projects Screen -->
     <div id="ProjectsPage">
