--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="https://pbs.twimg.com/media/DCkm5RqVoAA9qdg.jpg:">
+                  <img src="https://pbs.twimg.com/media/DCkm5RqVoAA9qdg.jpg">
                   <div class="carousel-caption">Gameplay</div>
                 </div>
                 <div class="item">
